added AUTHORS, README
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@516 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
-include manual/manual.pdf
+include AUTHORS
 include LICENSE
+include manual/manual.pdf
+
 prune test
 exclude pyx/axis.py pyx/text.py
