moved lfs directory to share/pyx
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@517 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include AUTHORS
 include LICENSE
 include manual/manual.pdf
+recursive-include pyx/lfs *.lfs *.py *.tex
 
 prune test
 exclude pyx/axis.py pyx/text.py
