--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include AUTHORS
 include LICENSE
+include INSTALL
+include CHANGES
 include manual/manual.pdf
 recursive-include pyx/lfs *.lfs *.py *.tex
 
