*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@619 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -13,7 +13,7 @@ manual.pdf: manual.ps
 manual.ps: manual.dvi
 	dvips manual.dvi
 
-manual.dvi: $(wildcard *.tex) $(patsubst %.py, %.eps, $(wildcard *.py))
+manual.dvi: $(wildcard *.tex) $(patsubst %.py, %.eps, $(wildcard *.py)) pyxversion.tex
 	latex manual.tex
 
 pyxversion.tex: ../pyx/__init__.py
