use listings.sty
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@634 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -21,4 +21,4 @@ examples.dvi: examples.py $(epsfiles)
 	-rm examples.ps examples.pdf
 
 %.eps: %.py
-	((cd $(dir $^) python $^))
+	cd $(dir $^) && python $^
