make clean; make all; additional examples
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@699 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,6 +2,13 @@
 
 default: examples.dvi
 
+clean:
+	-rm examples.dvi examples.ps examples.pdf *.eps */*.eps
+
+all:
+	make clean
+	make pdf
+
 pdf: examples.pdf
 ps: examples.ps
 dvi: examples.dvi
