clean examples.tex examples.log examples.aux as well
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@703 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 default: examples.dvi
 
 clean:
-	-rm examples.dvi examples.ps examples.pdf *.eps */*.eps
+	-rm examples.tex examples.log examples.aux examples.dvi examples.ps examples.pdf *.eps */*.eps
 
 all:
 	make clean
