graph tex->text finished; graph docstrings (25%); various cleanups
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@726 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -2,6 +2,13 @@
 
 default: manual.dvi
 
+clean:
+	-rm manual.log manual.aux manual.dvi manual.ps manual.pdf *.eps
+
+all:
+	make clean
+	make pdf
+
 pdf: manual.pdf
 ps: manual.ps
 dvi: manual.dvi
@@ -20,4 +27,4 @@ pyxversion.tex: ../pyx/__init__.py
 	python -c "import sys;sys.path[:0]=[\"..\"];import pyx;print pyx.__version__" > pyxversion.tex
 
 %.eps: %.py
-	python $^
+	export PYTHONPATH=$(PWD)/.. ; python $^
