output html body
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@768 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -35,7 +35,7 @@ html: $(htmlfiles) $(pngfiles)
 	export PYTHONPATH=$(PWD)/.. ; cd $(dir $^) ; python $(notdir $^)
 
 %.py.html: %.py
-	sh -c "py2html $^"
+	sh -c "py2html -format:rawhtml $^"
 
 %.eps.png: %.eps
 	@# -dEPSCrop needs gs version >= 8.0
