renamed logo.pyx -> pyxlogo.py
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@774 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/png/Makefile
+++ b/www/png/Makefile
@@ -1,7 +1,7 @@
-default: logo.png
+default: pyxlogo.png
 
 clean:
-	-rm logo.png
+	-rm pyxlogo.png
 
 %.eps: %.py
 	export PYTHONPATH=$(PWD)/../.. ; cd $(dir $^) ; python $(notdir $^)
