--- a/www/png/Makefile
+++ b/www/png/Makefile
@@ -1,14 +1,16 @@
-default: pyxlogo.png
+
+pyfiles = $(wildcard *.py)
+pngfiles = $(patsubst %.py, %.png, $(pyfiles))
+
+default: $(pngfiles)
 
 clean:
-	-rm pyxlogo.png
+	-rm $(pngfiles)
 
-%.eps: %.py
+%.png: %.py
 	export PYTHONPATH=$(PWD)/../.. ; cd $(dir $^) ; python $(notdir $^)
-
-%.png: %.eps
 	@# -dEPSCrop needs gs version >= 8.0
-	gs8.0 -dEPSCrop -dNOPAUSE -dQUIET -dBATCH -sDEVICE=ppmraw -sOutputFile=- -r400 $^ > $@.large
+	gs8.0 -dEPSCrop -dNOPAUSE -dQUIET -dBATCH -sDEVICE=ppmraw -sOutputFile=- -r400 $*.eps > $@.large
 	ppmcolormask white $@.large|pnmscale 0.25 2> /dev/null > $@.alpha
 	pnmscale 0.25 $@.large|pnmtopng -alpha $@.alpha > $@
-	rm $@.large $@.alpha
+	rm $@.large $@.alpha $*.eps
