*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@788 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -17,7 +17,8 @@ html: $(htmlfiles) $(pngfiles)
 install: html
 	cp $(htmlfiles) $(pngfiles) $(cssfiles) ~/public-html/pyx
 	cd png; make
-	cp png/*.png ~/public-html/pyx
+	cp png/*.png examples/*.png ~/public-html/pyx
+	cp ../manual/manual.pdf ~/public-html/pyx
 
 %.html: %.pt maintemplate.pt
 	PYTHONPATH=~/bin/python/Zope3/src ./pt2html.py $<
