further docu for upcoming PyX 0.3 release
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@807 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -3,7 +3,7 @@
 default: manual.dvi
 
 clean:
-	-rm manual.log manual.aux manual.dvi manual.ps manual.pdf *.eps
+	-rm manual.log manual.dvi manual.ps manual.pdf *.eps *.aux
 
 all:
 	make clean
