remove obsolete comment
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@831 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -25,7 +25,7 @@ install: html
 	scp -oCompression=yes -r $(builddir)/* shell.sourceforge.net:/home/groups/p/py/pyx/htdocs
 
 %.html: %.pt maintemplate.pt pt2html.py
-	PYTHONPATH=~/bin/python/Zope3/src ./pt2html.py $<
+	PYTHONPATH=/usr/src/ZopeCVS/Zope3/src ./pt2html.py $<
 
 %.eps.png: %.eps
 	@# -dEPSCrop needs gs version >= 8.0
