--- a/www/Makefile
+++ b/www/Makefile
@@ -22,6 +22,7 @@ install: html
 	cp png/*.png ../examples/*.png ../examples/*/*.png $(builddir)
 	cp ../examples/*.eps ../examples/*/*.eps $(builddir)
 	cp ../manual/manual.pdf $(builddir)
+	chmod -R 664 $(builddir)/*
 	scp -oCompression=yes -r $(builddir)/* shell.sourceforge.net:/home/groups/p/py/pyx/htdocs
 
 %.html: %.pt maintemplate.pt pt2html.py
