--- a/www/png/Makefile
+++ b/www/png/Makefile
@@ -10,7 +10,5 @@ clean:
 %.png: %.py
 	export PYTHONPATH=$(PWD)/../.. ; cd $(dir $^) ; python $(notdir $^)
 	@# -dEPSCrop needs gs version >= 8.0
-	gs8.0 -dEPSCrop -dNOPAUSE -dQUIET -dBATCH -sDEVICE=ppmraw -sOutputFile=- -r400 $*.eps > $@.large
-	ppmcolormask white $@.large|pnmscale 0.25 2> /dev/null > $@.alpha
-	pnmscale 0.25 $@.large|pnmtopng -alpha $@.alpha > $@
-	rm $@.large $@.alpha $*.eps
+	python ../../contrib/epstopng.py -g gs8.0 -o $@ $*.eps
+	rm $*.eps
