.eps.png -> .png
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@844 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/.cvsignore
+++ b/examples/.cvsignore
@@ -1,1 +1,1 @@
-examples.aux examples.log examples.dvi examples.toc *.size *.eps *.py.html *.eps.png examples.ps examples.pdf examples.tex
+examples.aux examples.log examples.dvi examples.toc *.size *.eps *.py.html *.png examples.ps examples.pdf examples.tex
