--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,9 @@ include LICENSE
 include INSTALL
 include CHANGES
 include manual/manual.pdf
+recursive-include contrib *
+recursive-include pyx *.h
 recursive-include pyx/lfs *.lfs *.py *.tex
 
 prune test
-exclude pyx/axis.py pyx/text.py
+exclude pyx/axis.py
