include (and partly install) various files in tar.gz
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1048 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include INSTALL
 include CHANGES
 include manual/manual.ps
+recursive-include manual Makefile *.tex *.py
 include examples/examples.ps
 recursive-include contrib *
 recursive-include pyx *.h
