--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include LICENSE
 include INSTALL
 include CHANGES
 include manual/manual.ps
-recursive-include manual Makefile *.tex *.py
+recursive-include manual Makefile runlatex.sh pyx.sty *.tex *.py
 include examples/examples.ps
 recursive-include contrib *
 recursive-include pyx *.h
