typo and further doc cleanup
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1091 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,10 @@ build_pykpathsea=0
 build_t1strip=1
 
 [build_ext]
-# additional include and libary directories (for building the pykpathsea
-# extension module)
+# additional include and library directories:
+#   insert paths to the libkpathsea headers and library, when building
+#   the pykpathsea extention module and libkpathsea is not installed in
+#   the default search paths of your compiler and linker
 
 # include_dirs=
 # library_dirs=
