need to specify -> may need to specify
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1098 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 build_t1strip=1
 
 # Python bindings for the kpathsea library. You need the kpathsea header
-# and library and specify their location below.
+# and library and you may need to specify their location below.
 build_pykpathsea=0
 
 [build_ext]
