include example data files in distribution
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1099 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ recursive-include contrib *
 recursive-include pyx *.h
 recursive-include pyx/lfs *.lfs *.py *.tex
 recursive-include examples *.py
+recursive-include examples *.dat
 
 prune test
 exclude pyx/axis.py
