dvips -o and other makefile consmetics
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1105 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 default: examples.dvi
 
 clean:
-	-rm examples.tex examples.log examples.aux examples.dvi examples.ps examples.pdf *.eps */*.eps *.py.html */*.py.html *.png */*.png
+	-rm -f examples.tex examples.log examples.aux examples.dvi examples.ps examples.pdf *.eps */*.eps *.py.html */*.py.html *.png */*.png
 
 all:
 	make clean
@@ -18,7 +18,7 @@ examples.pdf: examples.ps
 	ps2pdf examples.ps
 
 examples.ps: examples.dvi
-	dvips examples.dvi
+	dvips -o examples.ps examples.dvi
 
 pyfiles = $(filter-out examples.py,$(wildcard *.py)) $(wildcard */*.py)
 htmlfiles = $(patsubst %.py, %.py.html, $(pyfiles))
@@ -30,7 +30,7 @@ eps: $(epsfiles)
 examples.dvi: examples.py $(epsfiles)
 	python examples.py $(basename $(epsfiles))
 	latex examples.tex
-	-rm examples.ps examples.pdf
+	-rm -f examples.ps examples.pdf
 
 html: $(htmlfiles) $(pngfiles)
 
