--- a/manual/Makefile
+++ b/manual/Makefile
@@ -3,7 +3,7 @@
 default: manual.dvi
 
 clean:
-	-rm manual.dvi manual.ps manual.pdf *.eps *.aux *.out *.toc *.log
+	-rm -f manual.dvi manual.ps manual.pdf *.eps *.aux *.out *.toc *.log
 
 all:
 	make clean
@@ -17,11 +17,11 @@ manual.pdf: manual.ps
 	ps2pdf manual.ps
 
 manual.ps: manual.dvi
-	dvips manual.dvi
+	dvips -o manual.ps manual.dvi
 
 manual.dvi: $(wildcard *.tex) $(patsubst %.py, %.eps, $(wildcard *.py)) pyxversion.tex
 	./runlatex.sh manual.tex
-	-rm manual.ps manual.pdf
+	-rm -f manual.ps manual.pdf
 
 pyxversion.tex: ../pyx/version.py
 	python -c "import sys;sys.path[:0]=[\"..\"];import pyx.version;print pyx.version.version" > pyxversion.tex
