include pyxfaq.pdf in distribution
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1253 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include INSTALL
 include CHANGES
 include manual/manual.ps
+include faq/pyxfaq.pdf
 recursive-include manual Makefile runlatex.sh pyx.sty *.tex *.py
 include examples/examples.ps
 recursive-include contrib *
