new data file handling; switched to new mathtree parser (old is removed)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1514 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -17,12 +17,14 @@ manual.pdf: manual.ps
 manual.ps: manual.dvi
 	dvips -o manual.ps manual.dvi
 
-manual.dvi: $(wildcard *.tex) $(patsubst %.py, %.eps, $(wildcard *.py)) pyxversion.tex
+manual.dvi: $(wildcard *.tex) eps pyxversion.tex
 	./runlatex.sh manual.tex
 	-rm -f manual.ps manual.pdf
 
 pyxversion.tex: ../pyx/version.py
 	python -c "import sys;sys.path[:0]=[\"..\"];import pyx.version;print pyx.version.version" > pyxversion.tex
+
+eps: $(patsubst %.py, %.eps, $(wildcard *.py))
 
 %.eps: %.py
 	export PYTHONPATH=$(PWD)/.. ; python $^
