convert manual to python documentation style
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1522 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/.cvsignore
+++ b/manual/.cvsignore
@@ -1,1 +1,1 @@
-*.out *.aux *.log *.dvi *.toc *.size *.eps *.ps *.pdf pyxversion.tex
+*.eps *.png *.dat *.aux manual.dvi manual.ps manual.pdf manual mkhowto pyxversion.tex
