--- a/manual/.cvsignore
+++ b/manual/.cvsignore
@@ -1,1 +1,1 @@
-*.eps *.png *.dat *.aux manual.dvi manual.ps manual.pdf manual mkhowto pyxversion.tex
+*.eps *.png *.aux manual.dvi manual.ps manual.pdf manual mkhowto pyxversion.tex
