remove aux and log files
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1525 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -8,7 +8,7 @@
 default:dvi
 
 clean:
-	-rm -fr manual.dvi manual.ps manual.pdf *.eps *.png manual
+	-rm -fr manual.dvi manual.ps manual.pdf *.eps *.png *.aux *.log
 
 all:
 	make clean
