no log files; remove png before latex2html
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1528 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -8,7 +8,7 @@
 default:dvi
 
 clean:
-	-rm -fr manual.dvi manual.ps manual.pdf *.eps *.png *.aux *.log manual
+	-rm -fr manual.dvi manual.ps manual.pdf *.eps *.png *.aux manual
 
 all:
 	make clean
@@ -36,6 +36,7 @@ manual.dvi: $(src) eps
 	./mkhowto --a4 --dvi manual.tex
 
 manual/manual.html: $(src) eps
+	-rm *.png # the png's are to big, but would be used by default
 	./mkhowto --image-type png --favicon "/pyx.ico" \
 	          --up-link "/" --up-title "PyX homepage" \
 	          --html manual.tex
