add html version of manual
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1599 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -29,6 +29,7 @@ build:
 	mkdir $(builddir)
 	cp $(htmlfiles) $(imagefiles) $(cssfiles) $(builddir)
 	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf $(builddir)
+	cp -r ../manual/manual $(builddir)
 	echo $(exampledirs)
 	for d in $(exampledirs); do mkdir $(builddir)/$$d; cp ../$$d/*.png ../$$d/*.eps $(builddir)/$$d; done
 
