--- a/www/Makefile
+++ b/www/Makefile
@@ -1,13 +1,5 @@
 default: build
 
-clean:
-	-rm *.html
-	rm -r build
-
-all:
-	make clean
-	make build
-
 ptfiles = $(filter-out maintemplate.pt, $(wildcard *.pt))
 htmlfiles = $(patsubst %.pt, %.html, $(ptfiles))
 imagefiles = valid-html401.png vcss.png pyx.ico
@@ -17,11 +9,19 @@ exampledirs = $(shell cd ..; find examples -type d|grep -v CVS)
 publicserver = shell.sourceforge.net
 publicpath = /home/groups/p/py/pyx/htdocs
 
+all:
+	make clean
+	make build
+
+clean:
+	-rm *.html
+	rm -r $(builddir)
+
 public: build
 	scp -oCompression=yes -r $(builddir)/* $(publicserver):$(publicpath)
 	-ssh $(publicserver) "cd $(publicpath); chmod -fR g+w *"
 
-build: htmlfiles otherhtml
+build: htmlfiles always
 	-rm -r $(builddir)
 	mkdir $(builddir)
 	cp $(htmlfiles) $(imagefiles) $(cssfiles) $(builddir)
@@ -35,10 +35,5 @@ htmlfiles: $(htmlfiles)
 %.html: %.pt maintemplate.pt pt2html.py
 	PYTHONPATH=/usr/src/ZopeCVS/Zope3/src:~/bin/python/Zope3/src ./pt2html.py $<
 
-otherhtml:
-	cd png; make
-	cd ../examples; make html
-	cd ../manual; make pdf
-	cd ../manual; make html
-	cd ../faq; make
-
+always:
+	
