date in pyx/version.py added
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1740 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,3 +9,4 @@ recursive-include pyx *.c *.h *.py
 recursive-include pyx/lfs *.lfs createlfs.tex
 recursive-include contrib *
 recursive-include examples *.py *.dat
+exclude manual/pyxversion.py manual/pyxdate.py faq/pyxversion.py faq/pyxdate.py
