include pyxrc, explicitly include README, PKG-INFO, setup.py, setup.cfg
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1763 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,4 @@
-include AUTHORS
-include LICENSE
-include INSTALL
-include CHANGES
+include AUTHORS CHANGES INSTALL LICENSE PKG-INFO README pyxrc setup.cfg setup.py
 include manual/Makefile manual/pyx.sty manual/*.tex manual/*.py manual/*.dat
 include faq/Makefile faq/pyxfaq.tex faq/glifaq.dtx faq/glifaq.ins
 include examples/Makefile examples/pyx.sty
