.html -> .py.html
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1902 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -20,7 +20,7 @@ examples.ps: examples.dvi
 
 files = $(foreach item, $(shell cat INDEX), $(if $(wildcard $(item)/INDEX), $(addprefix $(item)/, $(shell cat $(item)/INDEX)), $(item)))
 pyfiles = $(addsuffix .py, $(files))
-htmlfiles = $(addsuffix .html, $(files))
+htmlfiles = $(addsuffix .py.html, $(files))
 epsfiles = $(addsuffix .eps, $(files))
 pngfiles = $(addsuffix .png, $(files))
 
