use / in INDEX to indicate directories
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1905 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -18,7 +18,7 @@ examples.pdf: examples.ps
 examples.ps: examples.dvi
 	dvips -o examples.ps examples.dvi
 
-files = $(foreach item, $(shell cat INDEX), $(if $(wildcard $(item)/INDEX), $(addprefix $(item)/, $(shell cat $(item)/INDEX)), $(item)))
+files = $(foreach item, $(shell grep -v / INDEX), $(item)) $(foreach item, $(shell grep / INDEX), $(addprefix $(item), $(shell cat $(item)INDEX)))
 pyfiles = $(addsuffix .py, $(files))
 htmlfiles = $(addsuffix .py.html, $(files))
 epsfiles = $(addsuffix .eps, $(files))
