split example page
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1906 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/Makefile
+++ b/www/Makefile
@@ -1,11 +1,8 @@
 default: build
 
-ptfiles = $(filter-out maintemplate.pt, $(wildcard *.pt))
-htmlfiles = $(patsubst %.pt, %.html, $(ptfiles))
+htmlfiles = $(patsubst %.pt, %.html, $(filter-out maintemplate.pt examples.pt, $(wildcard *.pt))) examples/index.html $(patsubst %, examples/%index.html, $(shell grep / ../examples/INDEX))
 imagefiles = valid-html401.png vcss.png pyx.ico
 cssfiles = main.css
-builddir = build
-exampledirs = $(shell cd ..; find examples -type d|grep -v CVS)
 publicserver = shell.sourceforge.net
 publicpath = /home/groups/p/py/pyx/htdocs
 
@@ -14,26 +11,22 @@ all:
 	make build
 
 clean:
-	-rm *.html
-	rm -r $(builddir)
+	rm -r build
 
-public: build
-	scp -oCompression=yes -r $(builddir)/* $(publicserver):$(publicpath)
+public:
+	scp -oCompression=yes -r build/* $(publicserver):$(publicpath)
 	-ssh $(publicserver) "cd $(publicpath); chmod -fR g+w *"
 
 build: htmlfiles always
-	-rm -r $(builddir)
-	mkdir $(builddir)
-	cp $(htmlfiles) $(imagefiles) $(cssfiles) $(builddir)
-	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf $(builddir)
-	cp -r ../manual/manual $(builddir)
-	echo $(exampledirs)
-	for d in $(exampledirs); do mkdir $(builddir)/$$d; cp ../$$d/*.png ../$$d/*.eps $(builddir)/$$d; done
+	cp $(imagefiles) $(cssfiles) build
+	cp png/*.png ../manual/manual.pdf ../faq/pyxfaq.pdf build
+	cp -r ../manual/manual build
+	for d in "" $(shell grep / ../examples/INDEX); do cp ../examples/$$d*.png ../examples/$$d*.eps build/examples/$$d; done
 
 htmlfiles: $(htmlfiles)
 
-%.html: %.pt maintemplate.pt pt2html.py
-	PYTHONPATH=/usr/src/ZopeCVS/Zope3/src:~/bin/python/Zope3/src ./pt2html.py $<
+%.html: $(wildcard *.pt) pt2html.py
+	PYTHONPATH=/usr/src/ZopeCVS/Zope3/src:~/bin/python/Zope3/src ./pt2html.py $@
 
 always:
-	
+	@# just ensure to always build new even when the directory already exists
